2006-11-20  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.in:

	Release for GNOME 2.16.2

2006-10-02  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.in:

	Release for GNOME 2.16.1

2006-09-04  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.in:

	Release for GNOME 2.16.0

2006-08-21  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.in:

	Release for GNOME 2.15.92

2006-05-29  Elijah Newren  <newren gmail com>

	* NEWS:
	* configure.in:
	New release (2.14.2.1) since 2.14.2 didn't have translations in it

2006-05-29  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.in:

	Release for 2.14.2

2006-04-28  Thomas Wood  <thos@gnome.org>

	* configure.in:
	* po/LINGUAS:

	Patch from Bug 339157 - Use po/LINGUAS - based on the new guidelines

2006-04-11  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.in:

	Updated for 2.14.1

2006-04-10  Michiel Sikkes  <michiel.sikkes@gmail.com>

	* configure.in: Modified to use LINGUAS as stated on
	http://live.gnome.org/GnomeGoals/PoLinguas.

	* po/LINGUAS: File with all supported languages.

2006-03-28  Yair Hershkovitz  <yairhr@gmail.com>

	* configure.in: Added "he" too ALL_LINGUAS

2006-03-24  Ales Nyakhaychyk  <nab@mail.by>

	* configure.in: Added be (Belarusian) to ALL_LINGUAS

2006-03-24  Thomas Wood  <thos@gnome.org>

	* MAINTAINERS: Added. Fixes bug 335022 "does not have a MAINTAINERS file"

2006-03-22  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-21  Gora Mohanty  <gmohanty@cvs.gnome.org>

        * configure.in: Added or (Oriya) to ALL_LINGUAS.

2006-03-18  Vladimer Sichinava  <vlsichinava@gmail.com>

        * configure.in: Added ka (Georgian) to ALL_LINGUAS

2006-03-13  Thomas Wood  <thos@gnome.org>

	* AUTHORS:
	* NEWS:
	* configure.in:

	Release for 2.14.0

2006-03-06  Thomas Wood  <thos@gnome.org>

	* branded/GNOME-Curves.png:
	* tiles/gnome-tiles.xml.in.in:

	Updates from Lapo Calamandrei
