@@ -1,3 +1,7 @@
+2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* Makefile.am: Dist MAINTAINERS.
+
 2006-11-20  Thomas Wood  <thos@gnome.org>
 
 	* NEWS:
